# SKP_2_CW_6

./: .env.sample  pyproject.toml
blogs/: admin.py  forms.py  models.py  urls.py  views.py
blogs/migrations/: 0001_initial.py  0002_initial.py
blogs/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_list.html
config/: settings.py  urls.py
cron_logs/: cron_log.txt
mailings/: admin.py  forms.py  models.py  sending_check.py  services.py  urls.py  views.py
mailings/management/commands/: start_sending.py
mailings/migrations/: 0001_initial.py  0002_initial.py
mailings/templates/mailing/: base.html  client_confirm_delete.html  client_list.html  index.html  log_confirm_delete.html  log_detail.html  log_list.html  mailing_confirm_delete.html  mailing_list.html  message_confirm_delete.html  message_list.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: castom.py
users/migrations/: 0001_initial.py  0002_alter_user_verify_code.py  0003_alter_user_verify_code.py  0004_alter_user_verify_code.py
